set(BINARY ${CMAKE_PROJECT_NAME})

# add_executable(ExampleProject main.cpp file1.cpp file1.h)
file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp) #simplification

set(SOURCES ${SOURCES} ../tst/MonederoElectronicoTest.cpp ../tst/MonederoElectronicoTest.cpp)

add_executable(${BINARY}_run ${SOURCES} ../tst/MonederoElectronicoTest.cpp ../tst/MonederoElectronicoTest.cpp)
